<resources>
    <string name="app_name">MyRuns</string>
    <string name="profile_photo_label">Profile Photo</string>
    <string name="name_label">Name</string>
    <string name="input_name_text">Your name here</string>
    <string name="input_email_text">Your Email Here</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="input_phone_text">Your Phone Number Here</string>
    <string name="gender_label">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="class_label">Class</string>
    <string name="input_class_text">e.g. 2012</string>
    <string name="major_label">Major</string>
    <string name="input_major_text">e.g. Physics</string>
    <string name="button_change">Change</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="google_app_id">915997460540</string>

    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
        <item>SD card</item>
    </string-array>
    <string name="preference_name">my_shared_preferences</string>

    <string-array name="input_type">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="activity_type">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

    <string-array name="manual_entry_values">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart Rate</item>
        <item>Comment</item>
    </string-array>

    <string-array name="entries_unit_preference">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>

    <string-array name="entryvalues_unit_preference">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <!-- Preference keys -->
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_phone_number">profile_phone_number</string>
    <string name="preference_key_profile_gender">profile_gender</string>
    <string name="preference_key_profile_class">profile_class</string>
    <string name="preference_key_profile_major">profile_major</string>

    <string name="profile_info_saved">Profile information saved</string>
    <string name="profile_image">profile image</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="start_button_text">START</string>
    <string name="manual_entry_duration">Duration</string>
    <string name="manual_entry_distance">Distance</string>
    <string name="manual_entry_calories">Calories</string>
    <string name="manual_entry_heart_rate">Heart Rate</string>
    <string name="manual_entry_comment">Comment</string>
    <string name="title_activity_gpsmode">Map</string>
    <string name="title_privacy_setting">Privacy Setting</string>
    <string name="summary_privacy_setting">Posting your records anonymously</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="webpage">Webpage</string>
    <string name="cs_dartmouth_url">http://web.cs.dartmouth.edu/</string>
    <string name="title_comments">Comments</string>
    <string name="summary_comments">Please enter your comments</string>
    <string name="summary_unit_preference">Select the units</string>
    <string name="title_unit_preference">Unit Preference</string>
    <string name="title_account_preferences">Name, Email, Class, etc</string>
    <string name="summary_account_preferences">User Profile</string>
    <string name="title_account_preferences_category">Account Preferences</string>
    <string name="title_misc_category">Misc.</string>
    <string name="comment_hint">How did it go? Notes here.</string>
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity Type</string>
    <string name="sync">SYNC</string>
    <string name="date_and_time">Date and time</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_map_entry_display">Map</string>
</resources>
