<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cs65.don.myruns.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_photo_label" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/prof_photo"
                    android:layout_marginStart="49dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_change"
                    android:id="@+id/change_photo"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/name_label" />

            <EditText
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_name_text"
                android:hint="@+id/name_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/email_label" />

            <EditText
                android:id="@+id/email_text"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_email_text"
                android:hint="@+id/name_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/phone_label" />

            <EditText
                android:id="@+id/phone_num_text"
                android:inputType="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_phone_text"
                android:hint="@+id/name_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/gender_label" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/female_check"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/Male_check"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/class_label" />

            <EditText
                android:id="@+id/class_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_class_text"
                android:hint="@+id/name_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/major_label" />

            <EditText
                android:id="@+id/major_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_major_text"
                android:hint="@+id/name_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_text"
                    android:id="@+id/save_button"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_text"
                    android:id="@+id/cancel_button"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
