<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.AccountPreferencesActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_photo_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false" >

                <ImageView
                    android:id="@+id/prof_photo"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/profile_image"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <requestFocus />
                </ImageView>

                <Button
                    android:id="@+id/change_photo"
                    android:text="@string/button_change"
                    android:onClick="displayPhotoDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/name_label" />

            <EditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name_text"
                android:singleLine="true"
                android:text=""
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/email_label" />

            <EditText
                android:id="@+id/email_text"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email_text"
                android:text=""
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/phone_label" />

            <EditText
                android:id="@+id/phone_num_text"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_phone_text"
                android:text=""
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/gender_label" />

            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioGenderF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioGenderM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/class_label" />

            <EditText
                android:id="@+id/class_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_class_text"
                android:singleLine="true"
                android:text=""
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/major_label" />

            <EditText
                android:id="@+id/major_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_major_text"
                android:singleLine="true"
                android:text=""
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_text"
                    android:id="@+id/save_button"
                    android:layout_weight="1"
                    android:onClick="onSaveCancelClicked"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_text"
                    android:id="@+id/cancel_button"
                    android:layout_weight="1"
                    android:onClick="onSaveCancelClicked"
                    tools:ignore="ButtonOrder,ButtonStyle" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
